<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/InfoText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/how_button_dev"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/keyPressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPressLabel"
        android:layout_centerVertical="true"
        android:text="@string/key_press"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/buttonNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPressLabel"
        android:layout_alignBottom="@+id/buttonPressLabel"
        android:layout_alignRight="@+id/InfoText1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/keyIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/keyPressLabel"
        android:layout_alignBottom="@+id/keyPressLabel"
        android:layout_alignRight="@+id/buttonNameLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/buttonPressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/keyIDLabel"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="31dp"
        android:text="@string/button_press"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
